--- a/_data/2020/stellenbosch/participants.yml
+++ b/_data/2020/stellenbosch/participants.yml
@@ -37,3 +37,6 @@
   image: /assets/images/su_2020_svoytiv.jpg
   bio: "Sofiya Voytiv is employed by Sociology Department at Stockholm University, Sweden. She uses mixed methods - social network analysis and ethnography to understand if armed conflict in the “homeland” can contribute to politicisation of social network of diasporic organisations and individuals. She aims to incorporate text networks analysis into her further research."
   website: https://sofiyavoytiv.com/
+- name: Tapfuma Pashapa
+  image: /assets/images/su_2020_tpashapa.jpg
+  bio: "Tapfuma Pashapa is a Ph.D. student at the University of Cape Town (UCT). He holds a MPhil. degree in Demography from UCT and a degree in Mathematics from Midlands State University. His research interests are in Information Communication Technology for Development (ICT4D) and the demography of developing countries. He is a member of the iCOMMS research group at UCT."
