--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -43,6 +43,7 @@
     - name: "1:30 - 3:00 Group excercise(*Zoom*)"
     - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "7:30 - 9:00 Sharad Goel: Title TBA (optional)"
 
 - date: 2020-06-18
   name: Surveys in the Digital Age
@@ -95,7 +96,7 @@
   name: Work on group projects (optional) and/or participate in SICSS Festival
   events:
     - name: "11:00 - 12:00 Optional: Creating open source software as part of an academic career. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)"
-    - name: "3:00 - 4:00 Student meetings with guest speaker"
+    - name: "3:00 - 4:00 Small group meetings with Elizabeth Bruch"
     - name: "4:00 - 6:00 Elizabeth Bruch: Title TBA"
 
 - date: 2020-06-26
