--- a/_data/2020/maastricht/participants.yml
+++ b/_data/2020/maastricht/participants.yml
@@ -18,9 +18,17 @@
   image: /assets/images/maas-AnnaLewczuk.jpg
   bio: "Anna is a PhD student in economics at University of Warsaw. Her research interests are focused around law & economics, constitutional economy and political economy. She completed master degrees in both law and quantitative methods in economics. Anna’s dissertation concerns the economic analysis of human rights in post-socialist states, particularly their economic effects, impact on subjective well-being of citizens, determinants and the interrelationship between standards of rights protection and economic development. Methodologically, she uses mainly spatial modelling and simultaneous equations models."
 
+- name: "Anna Sekuła"
+  image: /assets/images/maas-AnnaSekula.jpg
+  bio: "Anna is a PhD student in Comparative Analysis of Institutions, Economics and Law at the University of Turin and Collegio Carlo Alberto, Italy. In her work she focuses on transnational regulation of business activity. She examines diverse state-level legal responses to the problem of abuses of human and environmental rights in global supply chains. More broadly, she is also interested in methodology and philosophy of law and economics and the interdisciplinary redefinition of its conceptual framework."
+
 - name: "Bilgecag Aydogdu"
   image: /assets/images/maas-BilgecagAydogdu.jpg
   bio: "Bilgecag Aydogdu is a PhD candidate at Utrecht University, in Information and Computing Sciences Faculty. Before starting his Ph.D., he studied political science, economics, development studies and data science in Paris and in Istanbul. His PhD thesis focuses on gaining insights on migration patterns to Europe through the usage of mobile phone data. He is interested in making social impact and evidence-based policy making, which leverages on private data sources. He is excited to take part in growing network of computational social scientists!"
+
+- name: "Evangelia Nissioti"
+  image: /assets/images/maas-EvangeliaNissioti.jpg
+  bio: "Evangelia Nissioti is a Ph.D. candidate at the Erasmus Mundus Doctorate Program on Law and Economics. She has attended research semesters in Universita di Bologna and Erasmus University of Rotterdam while her home university is the University of Hamburg. She has a legal background with a bachelor in law from the National Kapodistrian University of Athens and is an admitted lawyer to the Athens Bar Association. Her research interests revolve around the economic analysis of dispute resolution systems and more specifically, her PhD project deals with the question of whether mediation can generate more efficient outcomes than litigation and negotiation. She holds a Joint Degree Master LL.M/M.A. on Law and Economics from the EMLE Program and is trained in empirical analysis and the conduct of experiments."
 
 - name: "Haroun Rahimi"
   image: /assets/images/maas-HarounRahimi.jpg
@@ -57,3 +65,4 @@
 - name: "Yulia Orlova"
   image: /assets/images/maas-YuliaOrlova.jpg
   bio: "Yulia is a postdoctoral researcher and a lecturer at Higher School of Economics (HSE), Moscow, where she received PhD in economy in 2017. Her main research interests include regulation in network industries, especially in power sector, and antitrust cases. Yulia’s current project investigates influence of renewable energy policy in Russia on investment decisions and competition between investors. Yulia received her M.A. in Economic Geography from Moscow State University in 2006."  
+   
