[Stellenbosch] Fix typo in one of the participant bios

--- a/_data/2020/stellenbosch/people.yml
+++ b/_data/2020/stellenbosch/people.yml
@@ -72,4 +72,4 @@ participants:
       bio: "Tapfuma Pashapa is a Ph.D. student at the University of Cape Town (UCT). He holds a MPhil. degree in Demography from UCT and a degree in Mathematics from Midlands State University. His research interests are in Information Communication Technology for Development (ICT4D) and the demography of developing countries. He is a member of the iCOMMS research group at UCT."
     - name: Uviwe Binase
       image: /assets/images/su_2020_ubinase.jpg
-      bio: "Uviwe is a PhD candidate at the Univesity of the Western Cape (UWC) under the Statistics and Population Studies Department. My current research seeks to understand The Economics of Tobacco Control in South Africa. I enrolled in this seminar as I have an interest in advancing my data analytics skills."
+      bio: "Uviwe is a PhD candidate at the Univesity of the Western Cape (UWC) under the Statistics and Population Studies Department. Her current research seeks to understand The Economics of Tobacco Control in South Africa. She enrolled in this seminar as she has an interest in advancing her data analytics skills."
