--- a/_data/2020/stellenbosch/schedule.yml
+++ b/_data/2020/stellenbosch/schedule.yml
@@ -10,32 +10,32 @@
     - name: "**About the Exercises**<br/>It is important that you work through the chapters completely to understand all of the important concepts (both those covered in the session and the rest covered in the chapter). Afterwards, we have extracted a number of relevant exercises from the chapter to work through. For these exercises you can use the provided notebooks and data [here](https://github.com/dougaparry/Intro-to-R) to get started (download the full repo as a zip file). While the solutions for the exercises can be found on the Internet, we encourage you to work through the exercises using the chapter first to get used to solving problems with R."
     - name: "**Accompanying Notebooks and Data:** [View on GitHub](https://github.com/dougaparry/Intro-to-R)."
 
-- date: "Day One (Monday 8 June 2020)"
+- date: 2020-06-08
   events:
     - name: "**09:00-10:00** Welcome and Introduction"
     - name: "Introduction to R and R Studio<br/>[Watch the Video on YouTube](https://youtu.be/MYvXXL075mw)."
     - name: "This session is based around chapters 2, 4, 6, and 8 of R 4 Data Science. It is important that you work through the chapters completely to understand the basics of working in R before we move forward with more advanced concepts. First, as shown in the video, download and install R and Rstudio. There are no exercises for this session, your task is to get setup with R and RStudio and work through the relevant chapters before we start working with the tidyverse tomorrow."
     - name: "_Relevant Chapters:_ [Chapter 2](https://r4ds.had.co.nz/explore-intro.html), [Chapter 4](https://r4ds.had.co.nz/workflow-basics.html), [Chapter 6](https://r4ds.had.co.nz/workflow-scripts.html), [Chapter 8](https://r4ds.had.co.nz/workflow-projects.html)."  
 
-- date: "Day Two (Tuesday 9 June 2020)"
+- date: 2020-06-09
   events:
     - name: "Data Transformation in R<br/>[Watch the Video on YouTube](https://youtu.be/3Cbx53dEH-M)."
     - name: "_Relevant Chapters:_ [Chapter 5](https://r4ds.had.co.nz/transform.html)."
     - name: "_Exercises available [here](https://github.com/dougaparry/Intro-to-R/blob/master/Exercises/1_Tuesday.md)._"
 
-- date: "Day Three (Wednesday 10 June 2020)"
+- date: 2020-06-10
   events:
     - name: "Working with Data in R<br/>[Watch the Video on YouTube](https://youtu.be/BgmyipnVQf8)."
     - name: "_Relevant Chapters:_ [Chapter 11](https://r4ds.had.co.nz/data-import.html), [Chapter 12](https://r4ds.had.co.nz/tidy-data.html), [Chapter 13](https://r4ds.had.co.nz/relational-data.html)."
     - name: "_Exercises available [here](https://github.com/dougaparry/Intro-to-R/blob/master/Exercises/2_Wednesday.md)._"
 
-- date: "Day Four (Thursday 11 June 2020)"
+- date: 2020-06-11
   events:
     - name: "Data Types in R<br/>[Watch the Video on YouTube](https://youtu.be/ujF9QUoVkOE)."
     - name: "_Relevant Chapters:_ [Chapter 14](https://r4ds.had.co.nz/strings.html), [Chapter 15](https://r4ds.had.co.nz/factors.html), [Chapter 16](https://r4ds.had.co.nz/dates-and-times.html), [Chapter 20](https://r4ds.had.co.nz/vectors.html)." 
     - name: "_Exercises available [here](https://github.com/dougaparry/Intro-to-R/blob/master/Exercises/3_Thursday.md)._"
 
-- date: "Day Five (Friday 12 June 2020)"
+- date: 2020-06-12
   events:
     - name: "Data Visualisation<br/>[Watch the Video on YouTube](https://youtu.be/PoQy1EFVgrY)."
     - name: "_Relevant Chapters:_ [Chapter 3](https://r4ds.had.co.nz/data-visualisation.html), [Chapter 28](https://r4ds.had.co.nz/graphics-for-communication.html)."
@@ -43,21 +43,21 @@
 
 - date: "Week Two: Introduction to Computational Social Science"
 
-- date: "Day Six (Monday 15 June 2020)"
+- date: 2020-06-15
   events:
     - name: "Introduction to Computational Social Science"
     - name: "Why SICSS"
     - name: "Ethics in CSS"
     - name: "Four Areas of Difficulty"
 
-- date: "Day Seven (Tuesday 16 June 2020)"
+- date: 2020-06-16
   events:
     - name: "Collecting Digital Trace Data"
     - name: "Strengths and Weaknesses of Digital Trace Data"
     - name: "Screen Scraping"
     - name: "APIs"
 
-- date: "Day Eight (Wednesday 17 June 2020)"
+- date: 2020-06-17
   events:
     - name: "History of Quantitative Text Analysis"
     - name: "Basic Text Analysis"
@@ -65,13 +65,13 @@
     - name: "Topic Models"
     - name: "Text Networks"
 
-- date: "Day Nine (Thursday 18 June 2020)"
+- date: 2020-06-18
   events:
     - name: "Git for Data Analysis"
     - name: "Social Network Analysis"
     - name: "Modelling and Machine Learning"
 
-- date: "Day Ten (Friday 19 June 2020)"
+- date: 2020-06-19
   events:
     - name: "Survey Research in the Digital Age"
     - name: "Sampling"
@@ -79,9 +79,28 @@
     - name: "Combining Surveys and Big Data"
     - name: "Experiments in the Digital Age"
 
-- date: "Week Three: SICSS Festival"
-
-- date: "Days 11-15 (Monday 22 - Friday 26 June 2020)"
+- date: "Week Three: SICSS Festival and Guest Lectures"
   events:
-    - name: "SICSS Festival"
-    - name: "Guest Lectures (to be announced)"
+    - name: "The SICSS Festival 2020 will take place Monday, June 22 - Friday, June 26, 2020. During the festival, alumni from all SICSS locations are hosting events such as tutorials, panel discussions, or debates. Additional guest lectures for SICSS-Stellenbosch participants will also take place during this time. Events that are part of the festival require prior registration. More information is available at the associated link."
+    - name: "[Full Information on the SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival)"
+    - name: "Details of Guest Lectures to be posted in due course."
+
+- date: 2020-06-22
+  events:
+    - name: "_(Festival)_ Panel discussion on teaching computational social science. [Registration](https://forms.gle/mCdyY2VPZdLGjqKTA)."
+
+- date: 2020-06-23
+  events:
+    - name: "_(Festival)_ Panel discussion on diversity in computational social science. [Registration](https://forms.gle/vxH5i1FgKfKXzP8P7)."
+
+- date: 2020-06-24
+  events:
+    - name: "_(Festival)_ Using Empirica for high-throughput virtual lab experiments. Limited participation, [see](https://compsocialscience.github.io/summer-institute/2020/festival)."
+
+- date: 2020-06-25
+  events:
+    - name: "_(Festival)_ Creating open source software as part of an academic career. [Registration](https://forms.gle/AUF65qz4sZmVve288)."
+
+- date: 2020-06-26
+  events:
+    - name: "_(Festival)_ Opportunities and challenges with industry collaborations. [Registration](https://forms.gle/j8qkaSysvzJgAoB38)."
