--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -81,6 +81,10 @@ participants:
       image: /assets/images/claire_daviss.png
       bio: "Claire Daviss is a PhD student in sociology at Stanford University. Her research interests include gender inequality, work and employment, and quantitative methods. Her current research focuses on long-term trends in employers' preferences for workers of different genders, drawing on longitudinal data from a large online labor marketplace. She's excited to learn more about how computational methods can be utilized for academic and community-engaged research."
 
+    - name: Diana Reddy
+      image: /assets/images/diana_reddy.png
+      bio: "Diana Reddy is an attorney and a Doctoral Student in the Jurisprudence and Social Policy Program at UC Berkeley. Her research focuses on work law; law and political economy; law and social movements; and social stratification and inequality, with a particular emphasis on the "identity politics" of class. Diana graduated Order of the Coif from New York University School of Law, where she was a Root-Tilden-Kern Scholar. She has an MA in Sociology and a BA in Cultural and Social Anthropology, magna cum laude, from Stanford University. Before her return to academia, Diana practiced labor law. Diana served as in-house counsel for the California Teachers Association, a labor union representing over 325,000 educators in the state of California. Prior to that, she was an associate with Altshuler Berzon LLP in San Francisco, CA, where she litigated labor, environmental, class action, and voting rights cases. She was the 2010 Fellow in the General Counsel's Office of the AFL-CIO in Washington, DC."
+      
     - name: Ernesto Gutiérrez Topete
       image: /assets/images/ernesto_gutierrez_topete.png
       bio: "Ernesto Gutiérrez Topete is a PhD student in Hispanic Linguistics at UC Berkeley. His research is focused on Spanish-English bilingualism, code-switching, and Spanish in the US. His work falls within the subdisciplines of sociophonetics and psycholinguistics. Through a variationist approach, the research he conducts is primarily experimental and quantitative."
