--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -79,8 +79,8 @@ participants:
 
     - name: Chirag Modi
       image: /assets/images/chirag_modi.png
-      bio: Chirag Modi is a graduating Physics PhD student at UC Berkeley. His primary research is focused on computational cosmology and developing statistical methods for scientific analysis using machine learning. He is equally interested in expanding his work and contributing to social topics, particularly public policy, social equity and climate change. He is currently working on developing causal inference techniques to evaluate the impact of policy interventions.
-      Website: https://modichirag.github.io/
+      bio: "Chirag Modi is a graduating Physics PhD student at UC Berkeley. His primary research is focused on computational cosmology and developing statistical methods for scientific analysis using machine learning. He is equally interested in expanding his work and contributing to social topics, particularly public policy, social equity and climate change. He is currently working on developing causal inference techniques to evaluate the impact of policy interventions."
+      website: https://modichirag.github.io/
 
     - name: Claire Daviss
       image: /assets/images/claire_daviss.png
