--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -9,25 +9,25 @@
 - date: 2020-06-02
   name: Work on Pre-SICSS Tasks and Dinner Talks
   events:
-    - name: "Debrief and Small Group Dinner Talks"
+    - name: "Small Group Dinner Talks (Optional)"
       time: "19:30 - 20:15"
      
 - date: 2020-06-05
   name: Work on Pre-SICSS Tasks and Dinner Talks
   events:
-    - name: "Debrief and Small Group Dinner Talks"
+    - name: "Small Group Dinner Talks (Optional)"
       time: "19:30 - 20:15"   
       
 - date: 2020-06-09
   name: Work on Pre-SICSS Tasks and Dinner Talks
   events:
-    - name: "Debrief and Small Group Dinner Talks"
+    - name: "Small Group Dinner Talks (Optional)"
       time: "19:30 - 20:15"
       
 - date: 2020-06-12
   name: Work on Pre-SICSS Tasks and Dinner Talks
   events:
-    - name: "Debrief and Small Group Dinner Talks"
+    - name: "Small Group Dinner Talks (Optional)"
       time: "19:30 - 20:15"   
 
 - date: 2020-06-14
