--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -188,7 +188,15 @@
 
 - day: Day 5
   id: day_5
-  topic: "Mass Collaboration (coming soon)"  
+  topic: "Mass Collaboration (coming soon)"
+  events:
+    - name: "Distributed Data Collection"
+      video: "https://www.youtube.com/embed/S0foUGRnYIo"
+      sublinks:
+        - link: "https://youtu.be/S0foUGRnYIo"
+          text: "Video"
+        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day4-surveys/01-survey-research-digital-age.pdf"
+          text: "Slides"
   exercise_title: "Group exercise"
   exercise:
     - name: "Lesson plan (participants)"
