--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -193,7 +193,7 @@
     - name: "Distributed Data Collection"
       video: "https://www.youtube.com/embed/S0foUGRnYIo"
       sublinks:
-        - link: "https://youtu.be/S0foUGRnYIo"
+        - link: "https://youtube.com//watch?v=S0foUGRnYIo"
           text: "Video"
         - link: "https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day4-surveys/01-survey-research-digital-age.pdf"
           text: "Slides"
