--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -111,7 +111,7 @@ participants:
     - name: Meredith Meacham 
       image: /assets/images/meredith_meacham.png
       bio: Meredith Meacham is an Assistant Professor in the Department of Psychiatry and Behavioral Sciences at the University of California San Francisco. She is an epidemiologist and social scientist with a current focus on digital media as a tool for expanding access to healthcare and examining contemporary health behaviors, especially substance use and mental health. She is currently working on projects examining engagement with and trust in peer-generated online health information and novel knowledge production systems related to cannabis legalization.
-      website: www.meredithmeacham.com
+      website: https://www.meredithmeacham.com/
 
     - name: Nabamallika Dehingia
       image: /assets/images/nabamallika_dehingia.png
@@ -121,6 +121,10 @@ participants:
     - name: Purnima Padmanabhan
       image: /assets/images/purnima_padmanabhan.png
       bio: "Purnima Padmanabhan is a PhD student in Neuroscience at The Johns Hopkins School of Medicine. Her current work investigates how perception and valuation of effort and reward affect the engagement and efficacy of physical rehabilitation in neurological disorders. Broadly, she is interested in emotional and social decision making, and how we can translate our knowledge in neural correlates of reward sensitivities to bring about long-lasting improvement in social and cognitive behavior. She is particularly interested in developing a large-scale data-driven approach to  devise positive behavior change strategies in persons facing neuropsychiatric challenges."
+      
+      Name: Sherry Jiang
+      image: /assets/images/sherry_jiang.png
+      bio: "Sherry Jiang is a Ph.D student in psychology at University of California, San Diego. Her research areas focus on the intersection of emotion, morality, and decision-making combining experimental methods and computational methods (e.g., data mining and machine learning). She is especially interested in examining how people use social and affective information to inform decision-making, as well as how to decode emotions from big social media data."  
       
     - name: Terresa Eun
       image: https://raw.githubusercontent.com/compsocialscience/summer-institute/master/assets/images/terresa_eun.png
