--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -59,6 +59,10 @@ participants:
     - name: Abbie Nelson
       image: /assets/images/abbie_nelson.png
       bio: "Abbie Nelson is a Phd student in social work at Michigan State University.  She is a Licensed Clinical Social Worker with over ten years of experience. Her clinical focus has been trauma, sexual abuse, and domestic violence. Her research interests include developing holistic, culturally competent interventions for domestic violence survivors as well as the structural role of patriarchy and domestic violence. She also studies the connection between mental health and nutrition and is an active yoga instructor and triathlete. She is eager to learn more about how to bring computational social science to the discipline of social work."
+    
+    - name: Allison Jiang 
+      image: /assets/images/allison_jiang.png
+      bio: Allison Jiang is a PhD student in Economics at University of California, Berkeley. She is interested in Behavioral Economics with applications in real world settings. Her research focuses on identifying behavioral biases and examining how they affect decision making. More specifically, her current research is about helping individuals alleviate obesity and digital addiction. 
   
     - name: Brian Kim
       image: /assets/images/brian_kim.png
